--- a/.gitignore
+++ b/.gitignore
@@ -263,8 +263,10 @@ pids
 *.crt
 secrets/
 
-# WARP Agent configuration (contains project-specific rules)
+# AI Agent configuration (could contain project-specific credentials)
 WARP.md
+CLAUDE.md
+CURSOR.md
 
 # NextDNS specific
 *.nextdns
