--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -5,6 +5,9 @@ ENV PYTHONUNBUFFERED=1
 
 WORKDIR /app
 
+# Create non-root user
+RUN groupadd -r appuser && useradd -r -g appuser appuser
+
 COPY ./backend /app
 COPY ./backend/requirements.txt /app/requirements.txt
 
@@ -12,6 +15,12 @@ RUN pip install --no-cache-dir -r /app/requirements.txt
 
 # Install curl for healthcheck
 RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
+
+# Set ownership to non-root user
+RUN chown -R appuser:appuser /app
+
+# Switch to non-root user
+USER appuser
 
 EXPOSE 5000
 
