--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -35,9 +35,7 @@ RUN chmod +x /entrypoint.sh
 RUN chown -R nginx:nginx /usr/share/nginx/html && \
     chown -R nginx:nginx /var/cache/nginx && \
     chown -R nginx:nginx /var/log/nginx && \
-    chown -R nginx:nginx /etc/nginx/conf.d && \
-    touch /var/run/nginx.pid && \
-    chown -R nginx:nginx /var/run/nginx.pid
+    chown -R nginx:nginx /etc/nginx/conf.d
 
 # Switch to non-root user
 USER nginx
