--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -24,17 +24,26 @@ RUN apk add --no-cache curl
 # Copy built assets from build stage
 COPY --from=build /app/dist /usr/share/nginx/html
 
-# Copy nginx configuration
-COPY frontend/nginx.conf /etc/nginx/conf.d/default.conf
+# Copy nginx configuration (as main config, not conf.d)
+COPY frontend/nginx.conf /etc/nginx/nginx.conf
 
 # Copy entrypoint script and make it executable
 COPY frontend/entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
 
-# Add healthcheck
-HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
-    CMD curl -f http://localhost/ || exit 1
+# Set permissions for nginx user to write to required directories
+RUN chown -R nginx:nginx /usr/share/nginx/html && \
+    chown -R nginx:nginx /var/cache/nginx && \
+    chown -R nginx:nginx /var/log/nginx && \
+    chown -R nginx:nginx /etc/nginx/conf.d
 
-EXPOSE 80
+# Switch to non-root user
+USER nginx
+
+# Add healthcheck (updated for port 8080)
+HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
+    CMD curl -f http://localhost:8080/ || exit 1
+
+EXPOSE 8080
 
 CMD ["/entrypoint.sh"]
