--- a/portainer-stack.yml.template
+++ b/portainer-stack.yml.template
@@ -1,14 +1,34 @@
+# ==============================================================================
 # NextDNS Optimized Analytics - Portainer Stack Template
+# ==============================================================================
 #
-# This is a template file for Portainer stack deployment.
-# Copy this file to portainer-stack.yml and replace the placeholder values:
+# QUICK START:
+# 1. Generate secrets: Run the commands below to generate secure random values
+#    openssl rand -hex 32    # For LOCAL_API_KEY
+#    openssl rand -hex 32    # For AUTH_SECRET_KEY
+#    openssl rand -base64 16 # For POSTGRES_PASSWORD
 #
-# 1. YOUR_POSTGRES_PASSWORD_HERE - Set a secure password for PostgreSQL
-# 2. YOUR_NEXTDNS_API_KEY_HERE - Your NextDNS API key from dashboard
-# 3. profile1,profile2,profile3 - Replace with your actual NextDNS profile IDs
-# 4. YOUR_LOCAL_API_KEY_HERE - Generate a secure key: openssl rand -hex 32
-# 5. YOUR_AUTH_SECRET_KEY_HERE - Generate a secure key: openssl rand -hex 32
-# 6. YOUR_DOMAIN_HERE - Replace with your actual domain (e.g., https://yourdomain.com)
+# 2. Get NextDNS credentials from https://my.nextdns.io:
+#    - Navigate to Account → API Keys to get your API_KEY
+#    - Your PROFILE_IDS are in the URL: https://my.nextdns.io/PROFILE_ID/setup
+#
+# 3. Copy and customize this template:
+#    cp portainer-stack.yml.template portainer-stack.yml
+#    # Replace all YOUR_*_HERE placeholders with actual values
+#
+# 4. Deploy in Portainer:
+#    - Go to Stacks → Add Stack
+#    - Name it "nextdns-analytics"
+#    - Paste your customized YAML
+#    - Click "Deploy the stack"
+#
+# 5. Access your deployment:
+#    - Frontend: http://YOUR_SERVER:5003
+#    - Backend API: http://YOUR_SERVER:5002/docs
+#    - Health check: http://YOUR_SERVER:5002/health
+#
+# IMPORTANT: Never commit portainer-stack.yml with real credentials to git!
+#
 
 services:
   # PostgreSQL Database
@@ -55,21 +75,18 @@ services:
       
       # Local API Authentication
       LOCAL_API_KEY: YOUR_LOCAL_API_KEY_HERE
-
-      # Security Configuration (REQUIRED after PR #260)
-      # JWT Secret Key - CRITICAL: Generate with: openssl rand -hex 32
-      AUTH_SECRET_KEY: YOUR_AUTH_SECRET_KEY_HERE
-
+      
       # CORS Allowed Origins - CRITICAL: Set to your actual domain(s)
-      # Development: ALLOWED_ORIGINS=http://localhost:5002,http://localhost:5173
+      # Development: ALLOWED_ORIGINS=http://localhost:5003
       # Production: ALLOWED_ORIGINS=https://yourdomain.com,https://www.yourdomain.com
       ALLOWED_ORIGINS: YOUR_DOMAIN_HERE
-
-      # Web Interface Authentication (Optional but recommended for production)
+      
+      # Web Interface Authentication (Optional)
       # Set to true to require login for web interface
       AUTH_ENABLED: false
       AUTH_USERNAME: admin
-      # AUTH_PASSWORD: YOUR_SECURE_PASSWORD_HERE  # Uncomment if AUTH_ENABLED=true
+      AUTH_PASSWORD: YOUR_SECURE_PASSWORD_HERE  # Only used if AUTH_ENABLED=true
+      AUTH_SECRET_KEY: YOUR_AUTH_SECRET_KEY_HERE  # Generate with: openssl rand -hex 32
       AUTH_SESSION_TIMEOUT: 60
 
       # Application Configuration
@@ -100,11 +117,11 @@ services:
       # Backend API URL (internal to container network)
       BACKEND_API_URL: http://backend:5000/api
     ports:
-      - "5003:80"
+      - "5003:8080"
     networks:
       - nextdns-network
     healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost/ || exit 1"]
+      test: ["CMD-SHELL", "curl -f http://localhost:8080/ || exit 1"]
       interval: 30s
       timeout: 3s
       retries: 3
@@ -119,94 +136,67 @@ networks:
     driver: bridge
 
 # ==============================================================================
-# SECURITY SETUP GUIDE (PR #260 - Critical Security Fixes)
+# CONFIGURATION REFERENCE
 # ==============================================================================
 #
-# Before deploying, generate secure secrets and configure CORS:
+# Port Mappings:
+#   5001 - PostgreSQL database (for direct access/backups)
+#   5002 - Backend API (FastAPI with docs at /docs)
+#   5003 - Frontend web interface
 #
-# 1. Generate LOCAL_API_KEY (backend API authentication):
-#    openssl rand -hex 32
-#    Replace: YOUR_LOCAL_API_KEY_HERE
+# Required Environment Variables:
+#   POSTGRES_PASSWORD - Database password (generate with: openssl rand -base64 16)
+#   API_KEY - Your NextDNS API key from https://my.nextdns.io/account
+#   PROFILE_IDS - Comma-separated NextDNS profile IDs (e.g., abc123,def456)
+#   LOCAL_API_KEY - Backend API key (generate with: openssl rand -hex 32)
+#   AUTH_SECRET_KEY - JWT signing key (generate with: openssl rand -hex 32)
+#   ALLOWED_ORIGINS - CORS allowed origins (e.g., https://yourdomain.com)
 #
-# 2. Generate AUTH_SECRET_KEY (JWT token signing):
-#    openssl rand -hex 32
-#    Replace: YOUR_AUTH_SECRET_KEY_HERE
+# Optional Authentication:
+#   Set AUTH_ENABLED=true to require login for web interface
+#   Default username: admin (change AUTH_USERNAME to customize)
+#   Set AUTH_PASSWORD when AUTH_ENABLED=true
 #
-# 3. Configure ALLOWED_ORIGINS (CORS protection):
-#    Development: http://localhost:5003
-#    Production: https://yourdomain.com,https://www.yourdomain.com
-#    Replace: YOUR_DOMAIN_HERE
-#
-# 4. Set PostgreSQL password:
-#    openssl rand -base64 16
-#    Replace: YOUR_POSTGRES_PASSWORD_HERE
-#
-# 5. Optional - Enable authentication (recommended for production):
-#    Set AUTH_ENABLED: true
-#    Uncomment AUTH_PASSWORD and set a secure password
+# Application Settings:
+#   LOG_LEVEL - Logging verbosity (DEBUG, INFO, WARNING, ERROR)
+#   FETCH_INTERVAL - Minutes between NextDNS log fetches (default: 60)
+#   FETCH_LIMIT - Records per fetch request (max: 1000)
 #
 # ==============================================================================
 # DEPLOYMENT CHECKLIST
 # ==============================================================================
 #
-# [ ] Generated unique LOCAL_API_KEY (not from template)
-# [ ] Generated unique AUTH_SECRET_KEY (not from template)
-# [ ] Configured ALLOWED_ORIGINS with actual domain
-# [ ] Set secure POSTGRES_PASSWORD
-# [ ] Added NextDNS API_KEY and PROFILE_IDS
-# [ ] Reviewed port mappings (5001=db, 5002=backend, 5003=frontend)
-# [ ] Saved secrets to password manager
-# [ ] Never committed actual portainer-stack.yml to git
+# Before deploying, ensure you have:
+# [ ] Generated unique LOCAL_API_KEY (openssl rand -hex 32)
+# [ ] Generated unique AUTH_SECRET_KEY (openssl rand -hex 32)
+# [ ] Set secure POSTGRES_PASSWORD (openssl rand -base64 16)
+# [ ] Added your NextDNS API_KEY and PROFILE_IDS
+# [ ] Verified port mappings don't conflict with existing services
+# [ ] Saved all secrets to password manager
+# [ ] Confirmed portainer-stack.yml is in .gitignore
 #
 # ==============================================================================
-# QUICK START EXAMPLE
+# VERIFICATION
 # ==============================================================================
 #
-# # Generate all secrets at once
-# echo "LOCAL_API_KEY=$(openssl rand -hex 32)"
-# echo "AUTH_SECRET_KEY=$(openssl rand -hex 32)"
-# echo "POSTGRES_PASSWORD=$(openssl rand -base64 16)"
+# After deployment, verify everything works:
 #
-# # Copy template and edit
-# cp portainer-stack.yml.template portainer-stack.yml
-# nano portainer-stack.yml  # Replace all YOUR_*_HERE placeholders
+# 1. Check services are healthy:
+#    docker ps  # All three containers should show "healthy"
 #
-# # Deploy in Portainer
-# 1. Go to Portainer → Stacks → Add Stack
-# 2. Name: nextdns-analytics
-# 3. Paste edited YAML content
-# 4. Deploy
-#
-# ==============================================================================
-# VERIFICATION AFTER DEPLOYMENT
-# ==============================================================================
-#
-# 1. Check backend health:
+# 2. Test backend API:
 #    curl http://YOUR_SERVER:5002/health
-#    Expected: {"status":"healthy","healthy":true}
+#    # Expected: {"status":"healthy","healthy":true}
 #
-# 2. Verify CORS configuration:
-#    Check backend logs for: "🔒 CORS configured for origins: ..."
+# 3. Access frontend:
+#    Open http://YOUR_SERVER:5003 in browser
+#    # Should load the analytics dashboard
 #
-# 3. Verify frontend has NO API key exposed:
-#    Visit: http://YOUR_SERVER:5003
-#    Open DevTools → Sources → config.js
-#    Should NOT contain LOCAL_API_KEY
+# 4. Verify DNS logs are being fetched:
+#    curl http://YOUR_SERVER:5002/stats
+#    # Should show increasing record counts
 #
-# 4. Test API authentication:
-#    curl -H "X-API-Key: YOUR_LOCAL_API_KEY_HERE" \
-#         http://YOUR_SERVER:5002/health/detailed
-#
-# ==============================================================================
-# SECURITY REMINDERS
-# ==============================================================================
-#
-# ⚠️  CRITICAL:
-# - Never use wildcard (*) in ALLOWED_ORIGINS
-# - Never expose LOCAL_API_KEY in frontend
-# - Never commit secrets to version control
-# - Always use HTTPS in production for ALLOWED_ORIGINS
-# - Rotate secrets every 90 days
-# - Enable AUTH_ENABLED=true for production
+# 5. View interactive API docs:
+#    Open http://YOUR_SERVER:5002/docs
 #
 # ==============================================================================
