--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -258,7 +258,10 @@ jobs:
     name: 🏷️ Push Version Tag
     runs-on: ubuntu-latest
     needs: [calculate-version, production-build]
-    if: success()
+    if: |
+      always() &&
+      !contains(needs.*.result, 'failure') &&
+      !contains(needs.*.result, 'cancelled')
     steps:
       - name: 📎 Checkout code
         uses: actions/checkout@v6
