🏷️ Inject build version into backend via Docker ARG
- Add APP_VERSION build arg to Dockerfile.backend (defaults to 'dev')
- Replace hardcoded '2.0.0' in main.py with APP_VERSION env var
- Pass calculated version from workflow to Docker build
- /docs and /health endpoints now show the actual release version

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -247,6 +247,8 @@ jobs:
             maboni82/nextdns-optimized-analytics-${{ matrix.service }}:latest
             maboni82/nextdns-optimized-analytics-${{ matrix.service }}:${{ needs.calculate-version.outputs.version }}
             maboni82/nextdns-optimized-analytics-${{ matrix.service }}:${{ needs.calculate-version.outputs.year_month }}
+          build-args: |
+            APP_VERSION=${{ needs.calculate-version.outputs.version }}
           builder: ${{ steps.buildx.outputs.name }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
