fix: correct Dependabot PR detection in weekly maintenance workflow
The `head: 'dependabot'` filter passed to `github.rest.pulls.list`
expected an exact branch name match, but Dependabot branches are named
`dependabot/npm_and_yarn/...` — so the API returned zero results and
the report always showed "All up to date".

Replace the broken `head` filter with `per_page: 100` and rely on the
existing `pr.user.login === 'dependabot[bot]'` check to identify
Dependabot PRs correctly.

--- a/.github/workflows/dependabot-weekly.yml
+++ b/.github/workflows/dependabot-weekly.yml
@@ -31,7 +31,7 @@ jobs:
               owner: context.repo.owner,
               repo: context.repo.repo,
               state: 'open',
-              head: 'dependabot'
+              per_page: 100
             });
             
             const dependabotPRs = pulls.filter(pr => pr.user.login === 'dependabot[bot]');
